src/main/java/com/example/demo/error/exception/DemoException.java
package com.example.demo.error.exception;

public class DemoException extends RuntimeException{

    public DemoException(String message) {
        super(message);
    }

}
